EcoTech-Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecotech-server
spec:
  type: LoadBalancer
  selector:
    app: ecotech-server
  ports:
  - port: 8000
    targetPort: 8000
